# whisper

./: Makefile  WINDOWS.md  downloader.go  downloader_example_test.go  go.mod  go.sum  package.sh  whisper.go  whisper_test.go  whisper_unix.go  whisper_windows.go
.github/workflows/: release.yaml  test.yaml
cmake/: WindowsToolchain.cmake
cmd/: download-libs.go
native/: CMakeLists.txt  gowhisper.h
